data/derived/comb/progs/unify/prog7717.ml.out
Characters 47-48:
  let palindrome w = if (explode w = listReverse w)
                                                 ^
Error: This expression has type string but an expression was expected of type
         'a list
